Fix "clear" button size to align buttons
I wanted to increase the size of the Clear button
to align the button sizes, and give it more of a
distinct display for the user.

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,7 @@ body {
 button {
     flex: 1;
 }
+
+button.clear {
+    flex-grow: 2.5;
+}
